# HiRAEVT

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  HiRAHTCsIArray.cxx  LICENSE  Makefile  README.md  env.bash  env.sh  packetID.h  rootDefine.h  rootlogon.C  submit.sh  tldrReadMe.md
FilterUnpacker/: CMakeLists.txt  CUnpackerFilter.cpp  CUnpackerFilter.cpp~  CUnpackerFilter.h  DEBUGGING___________Unpacker.cpp  FragmentIndex.cpp  FragmentIndex.cpp_old  FragmentIndex.cpp~  HTFilter.cxx  HTFilter.h  HTUnpacker.cxx  HTUnpacker.h  Makefile  ORIGINAL___________Unpacker.cpp  RBFilterMain.cpp  RBFilterMain.h  SkeletonMain.cpp  Unpacker.cpp  Unpacker.cpp~  Unpacker.h  Unpacker.h~  UnpackerFilter  UnpackerLinkDef.h
HTCalibration/: HTCalibration.cxx  HTCalibration.h  Makefile
HTDetectorMap/: HTDetectorMap.cxx  HTDetectorMap.h  HTForwardArrayMap.cxx  HTForwardArrayMap.h  HTHiRAMap.cxx  HTHiRAMap.h  HTIonChamberMap.cxx  HTIonChamberMap.h  HTMicroballMap.cxx  HTMicroballMap.h  HTNeutronWallMap.cxx  HTNeutronWallMap.h  HTSisTimestampe15190Map.cxx  HTSisTimestampe15190Map.h  HTTDCSpareMap.cxx  HTTDCSpareMap.h  HTVetoWallMap.cxx  HTVetoWallMap.h  Makefile
HTDetectors/: CMakeLists.txt  CMakeLists.txt.old  HTCalibrator.cxx  HTCalibrator.h  HTDetector.cxx  HTDetector.h  HTDetectorsLinkDef.h  HTMcp.cxx  HTMcp.h  HTMusicIC.cxx  HTMusicIC.h  HTSimpleDetector.cxx  HTSimpleDetector.h  HTTimestamp.cxx  HTTimestamp.h  Makefile
HTElectronics/: CMakeLists.txt  GenLinkDef.h  HTCAEN1x90Unpacker.cxx  HTCAEN1x90Unpacker.h  HTCAEN7xxUnpacker.cxx  HTCAEN7xxUnpacker.h  HTCCUSBPacket.cxx  HTCCUSBPacket.h  HTElectronics.cxx  HTElectronics.h  HTElectronicsLinkDef.h  HTHINPHit.cxx  HTHINPHit.h  HTHINPUnpacker.cxx  HTHINPUnpacker.h  HTMADC32Unpacker.cxx  HTMADC32Unpacker.h  HTModuleUnpacker.cxx  HTModuleUnpacker.h  HTPh7xxUnpacker.cxx  HTPh7xxUnpacker.h  HTSisTimestampUnpacker.cxx  HTSisTimestampUnpacker.h  HTTimestamp.cxx  HTTimestamp.h  HTUSBStack.cxx  HTUSBStack.h  HTUSBStackMarker.cxx  HTUSBStackMarker.h  HTUnpackerFactory.cxx  HTUnpackerFactory.h  Makefile
HTExperiment/: CMakeLists.txt  GenLinkDef.h  HTExperiment.cxx  HTExperiment.h  HTExperimentInfo.cxx  HTExperimentInfo.h  HTExperimentLinkDef.h  HTExperimentOld.cxx  HTExperimentOld.h  HTExperimentalSetup.h  HTNSCLBufferHeader.cxx  HTNSCLBufferHeader.h  HTRingItem.cxx  HTRingItem.h  HTRingStateChangeItem.cxx  HTRingStateChangeItem.h
HTExperimentalSetup/: CMakeLists.txt  HTExperimentalSetup.cxx  HTExperimentalSetup.h  Makefile
HTLogo/: CMakeLists.txt  HiRAEVTLogo.cxx  HiRAEVTLogo.h
HTMapper/: CMakeLists.txt  HTMapper.cxx  HTMapper.h  Makefile  MapperMain.cxx
HTMappers/: CMakeLists.txt  GenLinkDef.h  HTDetectorMapper.cxx  HTDetectorMapper.h  HTMapper.h  HTMapper.h.bk  HTMapperFactory.cxx  HTMapperFactory.h  HTMcpMapper.cxx  HTMcpMapper.h  HTMusicICMapper.cxx  HTMusicICMapper.h  HTSimpleDetectorMapper.cxx  HTSimpleDetectorMapper.h  HTTimestampMapper.cxx  HTTimestampMapper.h
HTRawDataReader/: CMakeLists.txt  HTRawDataReader.cxx  HTRawDataReader.h  Makefile
HTRootElectronics/: CMakeLists.txt  GenLinkDef.h  HTRootAdc.cxx  HTRootAdc.h  HTRootCAEN1x90.cxx  HTRootCAEN1x90.h  HTRootCAEN1x90SingleHit.cxx  HTRootCAEN1x90SingleHit.h  HTRootCAEN7xx.cxx  HTRootCAEN7xx.h  HTRootElectronics.cxx  HTRootElectronics.h  HTRootElectronicsLinkDef.h  HTRootHINP.cxx  HTRootHINP.h  HTRootMADC32.cxx  HTRootMADC32.h  HTRootModule.cxx  HTRootModule.h  HTRootModuleFactory.cxx  HTRootModuleFactory.h  HTRootSisTimestamp.cxx  HTRootSisTimestamp.h  HTRootTimestamp.cxx  HTRootTimestamp.h  Makefile
HTRunInfo/: CMakeLists.txt  HTDAQStackInfo.cxx  HTDAQStackInfo.h  HTExperimentInfo.cxx  HTExperimentInfo.h  HTExperimentInfo.h.old  HTModuleInfo.cxx  HTModuleInfo.h  HTRunInfo.cxx  HTRunInfo.h  Makefile
HTUnpackers/: CMakeLists.txt  HTModuleUnpacker.cxx  HTModuleUnpacker.h  HTSisTimestampUnpacker.cxx  HTUnpackerFactory.cxx  HTUnpackerFactory.h  HTUnpackersLinkDef.h
RBExperiment/: #RBExperiment.cxx#  Makefile  Makefile_ROOT6  Makefile~  RBExperiment.cxx  RBExperiment.cxx~  RBExperiment.h  RBExperiment.h~  RBExperimentDict.cxx  RBExperimentDict.h  RBExperimentDict_rdict.pcm  RBExperimentLinkDef.h  RBNSCLBufferHeader.cxx  RBNSCLBufferHeader.h  RBRingItem.cxx  RBRingItem.h  RBRingStateChangeItem.cxx  RBRingStateChangeItem.h  libRBExperiment_rdict.pcm
RBRunInfo/: Makefile  RBDAQStackInfo.cxx  RBDAQStackInfo.h  RBExperimentInfo.cxx  RBExperimentInfo.h  RBModuleInfo.cxx  RBModuleInfo.h  RBRunInfo.cxx  RBRunInfo.h
RBSetup/: Makefile  RBSetup.cxx  RBSetup.cxx_AfterTDCRefChannelChange  RBSetup.cxx_BeforeTDCRefChannelChange~  RBSetup.cxx_JuanFeb11  RBSetup.cxx_JuanFeb11~  RBSetup.cxx_NoMB  RBSetup.cxx_run15  RBSetup.cxx~  RBSetup.h  RBSetupDict.cxx  RBSetupDict.h  RBSetupDict_rdict.pcm  RBSetupLinkDef.h  libRBSetup.so.1.0
config/: .gitignore  12014.run  12014T.run  15507.run  HiRAEVT.conf  HiRAEVT_e12014.conf  HiRAEVT_e12014T.conf  HiRAEVT_e15190.conf  HiRAEVT_e15507.conf  RIBbit2.conf  WMU.run
electronics/: DEBUGGING___________RBCAEN1x90Unpacker.cxx  DEBUGGING___________RBCAEN7xxUnpacker.cxx  DEBUGGING___________RBModuleUnpacker.cxx  DEBUGGING___________RBUSBStack.cxx  Makefile  ORIGINAL___________RBCAEN1x90Unpacker.cxx  ORIGINAL___________RBCAEN7xxUnpacker.cxx  ORIGINAL___________RBModuleUnpacker.cxx  ORIGINAL___________RBUSBStack.cxx  RBCAEN1x90Unpacker.cxx  RBCAEN1x90Unpacker.cxx_Oct12Juan  RBCAEN1x90Unpacker.cxx~  RBCAEN1x90Unpacker.h  RBCAEN1x90Unpacker.h~  RBCAEN7xxUnpacker.cxx  RBCAEN7xxUnpacker.cxx~  RBCAEN7xxUnpacker.h  RBCCUSBPacket.cxx  RBCCUSBPacket.h  RBElectronics.cxx  RBElectronics.h  RBElectronicsDict.cxx  RBElectronicsDict.h  RBElectronicsDict_rdict.pcm  RBElectronicsLinkDef.h  RBHINPHit.cxx  RBHINPHit.h  RBHINPUnpacker.cxx  RBHINPUnpacker.cxxZombie  RBHINPUnpacker.cxx_Oct12Juan  (+23 more)
mapper/: CMakeLists.txt  HTMapper.cxx  HTMapper.h  HTMapperLogo.h  HTMapperOld.h  Makefile  MapperMain.cxx
unpacker/: CMakeLists.txt  FragmentIndex.cxx  FragmentIndex.h  HTFilter.cxx  HTFilter.h  HTUnpacker.cxx  HTUnpacker.h  HTUnpackerLogo.h  Makefile  SkeletonMain.cxx
(+278 files in other folders)
